column width fixed on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -68,7 +68,7 @@ input+a {
 }
 
 main section{
-    width: 100%;
+    width: 100% !important;
 }
 
 main section > img{
